[package]
name = "ascn-rs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascn-rs = { version="0.3.0", git="https://github.com/BlueZeeKing/ascn-rs.git" }
chess = "3.2.0"
clap = { version = "4.2.4", features = ["derive"] }
pgn-rs = "0.0.2"

